gcc/testsuite/rust/rustc/ui/parser/issues/issue-44406_dg.rs
macro_rules! foo {
    ($rest: tt) => {
        bar(baz: $rest) // { dg-error "" "" { target *-*-* } }
    }
}

fn main() {
    foo!(true);
}

